--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "hexo-theme-Anatole",
-  "version": "1.0.0",
-  "description": "A white and simple hexo theme, originated from a Farbox theme",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "hexo-site",
+  "version": "0.0.0",
+  "private": true,
+  "hexo": {
+    "version": ""
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Ben02/hexo-theme-Anatole"
-  },
-  "keywords": [
-    "hexo",
-    "theme",
-    "Anatole"
-  ],
-  "author": "Ben Wong",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Ben02/hexo-theme-Anatole/issues"
-  },
-  "homepage": "https://github.com/Ben02/hexo-theme-Anatole#readme",
-  "devDependencies": {
+  "dependencies": {
+    "hexo": "^3.2.0",
+    "hexo-generator-archive": "^0.1.4",
+    "hexo-generator-category": "^0.1.3",
+    "hexo-generator-index": "^0.2.0",
+    "hexo-generator-tag": "^0.2.0",
+    "hexo-renderer-ejs": "^0.3.0",
+    "hexo-renderer-stylus": "^0.3.1",
+    "hexo-renderer-marked": "^0.3.0",
+    "hexo-server": "^0.2.0"
   }
 }
